; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/qcom/camss/extr_camss-vfe-4-7.c_vfe_word_per_line_by_pixel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/qcom/camss/extr_camss-vfe-4-7.c_vfe_word_per_line_by_pixel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @vfe_word_per_line_by_pixel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vfe_word_per_line_by_pixel(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %3, align 4
  switch i32 %6, label %13 [
    i32 135, label %7
    i32 133, label %7
    i32 134, label %7
    i32 132, label %7
    i32 129, label %10
    i32 128, label %10
    i32 131, label %10
    i32 130, label %10
  ]

7:                                                ; preds = %2, %2, %2, %2
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @CALC_WORD(i32 %8, i32 1, i32 8)
  store i32 %9, i32* %5, align 4
  br label %13

10:                                               ; preds = %2, %2, %2, %2
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @CALC_WORD(i32 %11, i32 2, i32 8)
  store i32 %12, i32* %5, align 4
  br label %13

13:                                               ; preds = %2, %10, %7
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @CALC_WORD(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
